--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-streamlit
-python-dotenv
-google-generativeai
-openai
-
+streamlit==1.24.0
+python-dotenv==1.1.0
+google-generativeai==0.2.0
+openai==0.27.0
